--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,37 @@
 body {
   text-align: center;
   margin-top: 2%;
+  background-color: #00acef;
 }
 
-#error {
-  color: red;
+#message {
+  font-size: 22px;
 }
 
-#valid-type {
-  color: green;
+img {
+  width: 120px;
+  height: 35px;
+  margin: 1% 3% 1% 0;
+}
+
+#mime-type {
+  font-size: 26px;
+}
+
+#footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  background-color: black;
+}
+
+#footer-name {
+  color: #00acef;
+  font-family: "Shrikhand", Arial;
+  font-size: 28px;
+  padding-top: .2em;
+  margin: 1% 0 1% 3%;
 }
