--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ body {
   background-color: #00acef;
 }
 
+#file-upload-container {
+    border: 1px solid #ccc;
+    display: inline-block;
+    padding: 6px 12px;
+}
+
 #footer {
   position: fixed;
   left: 0;
@@ -36,4 +42,16 @@ img {
   font-size: 26px;
 }
 
+#verify {
+  width: 100px;
+  font-size: 14px;
+  background-color: black;
+  color: #00acef;
+  border: none;
+  cursor: pointer;
+}
 
+#verify:hover {
+  background-color: #404040;
+  color: #00acef;
+}
